# MyApplication

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_atomic-1.87.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_chrono-1.87.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_context-1.87.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_coroutine-1.87.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-shared.cmake  libboost_coroutine-variant-static.cmake
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_exception-1.87.0/: boost_exception-config.cmake
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_filesystem-1.87.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-shared.cmake  libboost_filesystem-variant-static.cmake
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_headers-1.87.0/: boost_headers-config.cmake
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_log-1.87.0/: boost_log-config.cmake  libboost_log-variant-shared.cmake  libboost_log-variant-static.cmake
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_log_setup-1.87.0/: boost_log_setup-config.cmake  libboost_log_setup-variant-shared.cmake  libboost_log_setup-variant-static.cmake
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_system-1.87.0/: boost_system-config.cmake  libboost_system-variant-shared.cmake  libboost_system-variant-static.cmake
app/src/main/cpp/boost_1_87_0/inst/lib/cmake/boost_thread-1.87.0/: boost_thread-config.cmake  libboost_thread-variant-shared.cmake  libboost_thread-variant-static.cmake
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
